--- a/GAS/View/ProjectDetail.html
+++ b/GAS/View/ProjectDetail.html
@@ -198,7 +198,7 @@
                     <div class="layout-box" style="margin:10px;">
                         <div class="data_header">
                             Project Activities
-                            <span class="fa fa-plus" title="New Activity" ng-click="model.NewActivityForm=true" style="margin-left:20px; "></span>
+                            <span class="fa fa-plus" title="New Activity" ng-click="NewActivityForm()" style="margin-left:20px; "></span>
                             <span class="fa fa-dollar" title="Quick Expense" ng-click="QuickExpense()" style="margin-left:20px; "></span>
                         </div>
                       
